# gliq

./: .env.example  .gitignore  AGENTS.md  CODEX.md  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml
components/intake/: auth.py  db.py  extract.py  main.py  providers.py  vocabulary.json  vocabulary.py  web.py
components/intake/templates/: base.html  index.html  login.html  not_found.html  pending.html  pitch.html  pitches.html
components/reporting/: advisor.py  main.py  recommend.py  render.py
components/reporting/templates/: report.md.j2
components/scoring/: corpus.py  main.py  rules.py
data/etl/: calibrate.py  export_vocabulary.py  load_corpus.py  validate_scoring.py
data/migrations/: env.py  script.py.mako
data/migrations/versions/: 0001_initial_schema.py  0002_tag_votes_and_boxleiter.py  0003_boxleiter_becomes_primary.py  0004_report_markdown.py  0005_document_and_advisory.py
docs/: AI_USAGE_LOG.md  ARCHITECTURE.md  DEPLOYMENT.md  SCORING.md  SCREENSHOTS.md
infra/: Pulumi.dev.yaml  Pulumi.yaml  env-from-stack.py  index.ts  package-lock.json  package.json  tsconfig.json
infra/core/: apis.ts  compute.ts  database.ts  iam.ts  messaging.ts  networking.ts  secrets.ts  storage.ts
infra/scripts/: deploy.sh  hash-password.py  nginx-gliq.conf  node-startup.sh
infra/systemd/: gliq-intake.service  gliq-report.service  gliq-scoring.service
samples/: auto-looter-pitch.md  minimal-pitch.md  roanoake-pitch.md  strong-pitch.md  weak-pitch.md
shared/: __init__.py  config.py  schemas.py
tests/: test_advisor.py  test_intake_extraction.py  test_intake_web.py  test_reporting.py  test_schemas.py  test_scoring_rules.py
