[project]
name = "gliq"
version = "0.1.0"
description = "GreenlightIQ — automated game-pitch fitment review for publisher acquisitions teams"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Fred Teumer" }]

dependencies = [
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

# Each component installs only what it needs on its own VM. Keeping these
# separate is what makes the three processes independently deployable.
[project.optional-dependencies]
intake = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "google-cloud-pubsub>=2.21",
    "anthropic>=0.34",
    "openai>=1.40",          # Gemini via its OpenAI-compatible endpoint
    # --- the review UI ---
    # ⚠️ `pool`, not just `binary`. A serves overlapping requests from a
    # threadpool and a psycopg connection is not thread-safe, so unlike B and C
    # it needs a pool rather than one long-lived connection.
    # 🔒 Read-only use — see components/intake/db.py.
    "psycopg[binary,pool]>=3.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",   # multipart/form-data, for document upload
    "itsdangerous>=2.1",         # signs the session cookie (Starlette's middleware)
    "markdown>=3.6",             # renders pitches.report_md for display
]
scoring = [
    "google-cloud-pubsub>=2.21",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "pandas>=2.2",
]
reporting = [
    "google-cloud-pubsub>=2.21",
    "psycopg[binary]>=3.1",
    "jinja2>=3.1",
    # --- the LLM analyst (components/reporting/advisor.py) ---
    # `openai` drives the Gemini path via its OpenAI-compatible endpoint;
    # `anthropic` is the alternate provider. Neither is imported unless the
    # matching ADVISOR_PROVIDER is selected — the fixture default needs neither.
    "openai>=1.40",
    "anthropic>=0.69",
]
etl = [
    "psycopg[binary]>=3.1",
    # Incremental JSON parsing. The Kaggle export is a single ~863MB object;
    # json.load() would need several GB resident for a file walked once.
    "ijson>=3.2",
    # Schema migrations. An OPS dependency, not a runtime one — it pulls in
    # SQLAlchemy, which the components themselves never use (they speak
    # psycopg directly). Kept out of the component extras to keep the VMs lean.
    "alembic>=1.13",
    "pandas>=2.2",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["shared"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
